--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
       </div>
 
       <br />
+      <div id="loader"></div>
       <div class="col">
         <table class="table text-center">
           <thead class="table-dark">
