--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <tbody id="content"></tbody>
         </table>
       </div>
-      <div id="loader"></div>
+      <div id="loader text-center"></div>
     </div>
 
     <script src="index.js"></script>
