--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>SRI|URLSHORTNER</title>
+    <title>SRI | URLSHORTNER</title>
     <meta name="description" content="" />
     <link rel="icon" href="1.png" type="image/gif" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -71,7 +71,7 @@
           <tbody id="content"></tbody>
         </table>
       </div>
-      <div id="loader text-center"></div>
+      <div id="loader" class="text-center"></div>
     </div>
 
     <script src="index.js"></script>
