--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <br />
       
-      <div class="col">
+      <div class="col" id="loader">
         <table class="table text-center">
           <thead class="table-dark">
             <tr>
