--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <br />
 
       
-      <div class="col" id="loader">
+      <div class="col">
       
 
         <table class="table text-center">
